Bug 259894 - Common view properties used, but Trash looks different than other folders
Summary: Common view properties used, but Trash looks different than other folders
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-14 22:19 UTC by Dirk
Modified: 2010-12-15 17:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk 2010-12-14 22:19:59 UTC
Version:           unspecified (using Devel) 
OS:                Linux

I want that dolphin looks always the same, so i use the "common view properties for all folders" option in the general tab of the preferences dialog.
I use the "colum view mode" at the moment, but Trash is displayed in "details view mode".

Reproducible: Always

Steps to Reproduce:
Happens also in other view modes.

Actual Results:  
In Trash other view mode than in the other folders.

Expected Results:  
In Trash same view mode as in the other folders.

OS: Linux (x86_64) release 2.6.32-5-amd64
Compiler: gcc
Comment 1 Peter Penz 2010-12-15 17:41:16 UTC
SVN commit 1206728 by ppenz:

If "Use common view properties for all folders" is checked, the optimized view-modes for trash and searching should be replaced by the common view properties too.

BUG: 259894
FIXED-IN: 4.6.0


 M  +4 -4      viewproperties.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206728