If "Use common view properties for all folders" is checked, the optimized view-modes for trash and searching should be replaced by the common view properties too.

BUG: 259894
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/apps/; revision=1206728